# x0x-symphony

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  WORKFLOW.md  justfile
.github/workflows/: ci.yml
crates/x0x-symphony-core/: Cargo.toml  README.md
crates/x0x-symphony-core/src/: claim.rs  error.rs  handoff.rs  issue.rs  lib.rs  runner.rs  tracker.rs  workflow.rs  workspace.rs
crates/x0x-symphony-core/tests/: stub_round_trip.rs
crates/x0x-symphony-workspace/: Cargo.toml  README.md
crates/x0x-symphony-workspace/src/: containment.rs  hooks.rs  lib.rs
crates/x0x-symphony-workspace/tests/: containment.rs
docs/adr/: 0001-tracker-abstraction.md  0002-sharded-claim-ttl.md  0003-no-external-tracker-v1.md  0004-x0x-tasklist-as-backbone.md  README.md
docs/design/: saorsa-kanban-convergence.md  symphony.md
docs/plan/: implementation-plan.md  team-prompt.md
docs/symphony/: README.md  workspace.md
issues/: README.md  issues.jsonl  schema.md
