[workspace]
resolver = "2"
members = []

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.95.0"
license = "AGPL-3.0-or-later"
repository = "https://github.com/saorsa-labs/x0x-symphony"
homepage = "https://github.com/saorsa-labs/x0x-symphony"
authors = ["Saorsa Labs <david@saorsalabs.com>"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
