[package]
name = "x0x-symphony-core"
description = "Core traits and domain types for x0x-symphony."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
async-trait = "0.1"
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt", "sync"] }

[lints]
workspace = true
